add extra for auto recovery

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
       "Krevilraj\\Contact\\": "src"
     }
   },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Krevilraj\\Contact\\ContactServiceProvider"
+      ]
+    }
+  },
   "minimum-stability": "dev",
   "require": {}
 }
